--- a/leaderboardb.html
+++ b/leaderboardb.html
@@ -109,9 +109,9 @@
                             <td><font color="black">0.3679</font></td>
                             <td><font color="black">0.2368</font></td>
                             <td><b><font color="black">0.3788</font></b></td>
-                        </tr>                              
-                              
-                              
+                        </tr>
+
+
                                                                              <tr>
                             <td>4 </td>
                             <td>2023/5/24</td>
@@ -231,7 +231,18 @@
                                 <td><font color="red">0.3641</font></td>
                                 <td><b><font color="red">1.672</font></b></td>
                             </tr>
-
+                        <tr>
+                            <td>4 </td>
+                            <td>2023/5/27</td>
+                            <td>DSG1</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.1350</font></td>
+                            <td><font color="black">0.2133</font></td>
+                            <td><font color="black">0.3894</font></td>
+                            <td><font color="black">0.1660</font></td>
+                            <td><b><font color="black">0.9037</font></b></td>
+                            </tr>
                         </tbody>
                     </table>
                         <center><h6><br>Temporal Answer Grounding in Video Corpus Track</h6></center>
@@ -282,7 +293,17 @@
                             <td><font color="red">0.3560</font></td>
                             <td><b><font color="red">0.2545</font></b></td>
                          </tr>
-
+                                                 <tr>
+                            <td>4</td>
+                            <td>2023/5/27</td>
+                            <td>DSG1</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.0602</font></td>
+                            <td><font color="black">0.0970</font></td>
+                            <td><font color="black">0.1197</font></td>
+                            <td><b><font color="black">0.0923</font></b></td>
+                         </tr>
 
                         </tbody>
                     </table>
