--- a/leaderboard.html
+++ b/leaderboard.html
@@ -77,8 +77,20 @@
                         <td>R@1,IoU=0.7</td>
                                   <td><b>mIoU(R@1)</b></td>
 
-                                                    <tr>
+
+                          <tr>
                             <td>1 </td>
+                            <td>2023/5/27</td>
+                            <td>WAN</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.6237</font></td>
+                            <td><font color="black">0.4630</font></td>
+                            <td><font color="black">0.2939</font></td>
+                            <td><b><font color="black">0.4486</font></b></td>
+                        </tr>
+                                                    <tr>
+                            <td>2 </td>
                             <td>2023/5/7</td>
                             <td>Mote</td>
                             <td>-</td>
@@ -90,7 +102,7 @@
                         </tr>
 
                         <tr>
-                            <td>2 </td>
+                            <td>3 </td>
                             <td>2023/5/14</td>
                             <td>nsddd</td>
                             <td>-</td>
@@ -101,7 +113,7 @@
                             <td><b><font color="black">0.4411</font></b></td>
                         </tr>
                                                <tr>
-                            <td>3 </td>
+                            <td>4 </td>
                             <td>2023/5/26</td>
                             <td>HLT-base</td>
                             <td>-</td>
@@ -113,7 +125,7 @@
                         </tr>
 
                         <tr>
-                            <td>4 </td>
+                            <td>5 </td>
                             <td>2023/5/24</td>
                             <td>辣子鸡丁队</td>
                             <td>-</td>
@@ -125,7 +137,7 @@
                         </tr>
 
                                                                           <tr>
-                            <td>5 </td>
+                            <td>6 </td>
                             <td>2023/5/14</td>
                             <td>Weilan</td>
                             <td>-</td>
@@ -136,7 +148,7 @@
                             <td><b><font color="black">0.4336</font></b></td>
                         </tr>
                                                <tr>
-                            <td>6 </td>
+                            <td>7 </td>
                             <td>2023/5/22</td>
                             <td>WAN</td>
                             <td>-</td>
@@ -149,7 +161,7 @@
 
 
                                                <tr>
-                            <td>7 </td>
+                            <td>8 </td>
                             <td>2023/4/21</td>
                             <td>啊对对队</td>
                             <td>-</td>
@@ -161,7 +173,7 @@
                         </tr>
 
                         <tr>
-                            <td>8</td>
+                            <td>9</td>
                             <td>2023/5/7</td>
                             <td>Eval</td>
                             <td>-</td>
@@ -173,7 +185,7 @@
                         </tr>
 
                            <tr>
-                            <td>9 </td>
+                            <td>10 </td>
                             <td>2023/5/3</td>
                             <td>Ditto</td>
                             <td>-</td>
@@ -186,7 +198,7 @@
 
 
                         <tr>
-                            <td>10 </td>
+                            <td>11 </td>
                             <td>2023/5/7</td>
                             <td>菜鸟选手</td>
                             <td>-</td>
@@ -204,7 +216,7 @@
 
                        <tr>
 
-                            <td>11 </td>
+                            <td>12 </td>
                             <td>2023/4/10</td>
                             <td>-</td>
                             <td>-</td>
@@ -215,7 +227,21 @@
                             <td><b><font color="red">0.3997</font></b></td>
 
                         </tr>
+                        <tr>
+                            <td>13 </td>
+                            <td>2023/5/27</td>
+                            <td>GLNB</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.2558</font></td>
+                            <td><font color="black">0.1628</font></td>
+                            <td><font color="black">0.1078</font></td>
+                            <td><b><font color="black">0.2143</font></b></td>
 
+
+
+
+                        </tr>
 
                         </tbody>
                     </table>
