--- a/leaderboardb.html
+++ b/leaderboardb.html
@@ -164,10 +164,26 @@
                             <td><b><font color="red">0.3592</font></b></td>
 
                         </tr>
+
                        <tr>
 
 
                             <td>8 </td>
+                            <td>2023/5/27</td>
+                            <td>WAN</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.5029</font></td>
+                            <td><font color="black">0.3464</font></td>
+                            <td><font color="black">0.2055</font></td>
+                            <td><b><font color="black">0.3544</font></b></td>
+
+                        </tr>
+
+                       <tr>
+
+
+                            <td>9 </td>
                             <td>2023/5/25</td>
                             <td>Welian</td>
                             <td>-</td>
@@ -178,6 +194,21 @@
                             <td><b><font color="black">0.3537</font></b></td>
 
                         </tr>
+                                               <tr>
+
+
+                            <td>10 </td>
+                            <td>2023/5/27</td>
+                            <td>GLNB</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.2290</font></td>
+                            <td><font color="black">0.1330</font></td>
+                            <td><font color="black">0.0704</font></td>
+                            <td><b><font color="black">0.1870</font></b></td>
+
+                        </tr>
+
                         </tbody>
                     </table>
                                         <center><h6><br>Video Corpus Retrieval Track</h6></center>
@@ -195,8 +226,20 @@
                                 <td>MRR</td>
                             <td><b>Overall</b></td>
                             </tr>
-                           <tr>
+                                                <tr>
                             <td>1 </td>
+                            <td>2023/5/27</td>
+                            <td>DSG1</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.5225</font></td>
+                            <td><font color="black">0.7613</font></td>
+                            <td><font color="black">0.8982</font></td>
+                            <td><font color="black">0.6118</font></td>
+                            <td><b><font color="black">2.7938</font></b></td>
+                            </tr>
+                           <tr>
+                            <td>2 </td>
                             <td>2023/5/24</td>
                             <td>nsddd</td>
                             <td>-</td>
@@ -205,10 +248,10 @@
                             <td><font color="black">0.6947</font></td>
                             <td><font color="black">0.8023</font></td>
                             <td><font color="black">0.5799</font></td>
-                            <td><b><font color="black">2.599</font></b></td>
+                            <td><b><font color="black">2.5995</font></b></td>
                             </tr>
                         <tr>
-                            <td>2 </td>
+                            <td>3 </td>
                             <td>2023/5/26</td>
                             <td>HLT-base</td>
                             <td>-</td>
@@ -220,7 +263,7 @@
                             <td><b><font color="black">2.3709</font></b></td>
                             </tr>
                             <tr>
-                                <td>3</td>
+                                <td>4</td>
                                 <td>2023/5/21</td>
                                 <td>-</td>
                                 <td>-</td>
@@ -231,18 +274,7 @@
                                 <td><font color="red">0.3641</font></td>
                                 <td><b><font color="red">1.672</font></b></td>
                             </tr>
-                        <tr>
-                            <td>4 </td>
-                            <td>2023/5/27</td>
-                            <td>DSG1</td>
-                            <td>-</td>
-                            <td><font color="black"> -</font></td>
-                            <td><font color="black">0.1350</font></td>
-                            <td><font color="black">0.2133</font></td>
-                            <td><font color="black">0.3894</font></td>
-                            <td><font color="black">0.1660</font></td>
-                            <td><b><font color="black">0.9037</font></b></td>
-                            </tr>
+
                         </tbody>
                     </table>
                         <center><h6><br>Temporal Answer Grounding in Video Corpus Track</h6></center>
@@ -271,8 +303,20 @@
                             <td><font color="black">0.5631</font></td>
                             <td><b><font color="black">0.4115</font></b></td>
                          </tr>
-                                                 <tr>
+                                                                         <tr>
                             <td>2</td>
+                            <td>2023/5/27</td>
+                            <td>DSG1</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.2221</font></td>
+                            <td><font color="black">0.3799</font></td>
+                            <td><font color="black">0.4773</font></td>
+                            <td><b><font color="black">0.3598</font></b></td>
+                         </tr>
+
+                                                 <tr>
+                            <td>3</td>
                             <td>2023/5/26</td>
                             <td>HLT-base</td>
                             <td>-</td>
@@ -283,7 +327,7 @@
                             <td><b><font color="black">0.3486</font></b></td>
                          </tr>
                         <tr>
-                            <td>3</td>
+                            <td>4</td>
                             <td>2023/5/21</td>
                             <td>-</td>
                             <td>-</td>
@@ -293,17 +337,7 @@
                             <td><font color="red">0.3560</font></td>
                             <td><b><font color="red">0.2545</font></b></td>
                          </tr>
-                                                 <tr>
-                            <td>4</td>
-                            <td>2023/5/27</td>
-                            <td>DSG1</td>
-                            <td>-</td>
-                            <td><font color="black"> -</font></td>
-                            <td><font color="black">0.0602</font></td>
-                            <td><font color="black">0.0970</font></td>
-                            <td><font color="black">0.1197</font></td>
-                            <td><b><font color="black">0.0923</font></b></td>
-                         </tr>
+
 
                         </tbody>
                     </table>
