--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                             <td>263.3</td>
                         </tr>
                         <tr>
-                            <td>Test A (Released around April 10th)</td>
+                            <td>Test A</td>
                             <td>200</td>
                             <td>492</td>
                             <td>2,171</td>
@@ -242,7 +242,7 @@
                             <td>242.4</td>
                         </tr>
                         <tr>
-                            <td>Test B (Released around May 18th)</td>
+                            <td>Test B</td>
                             <td>200</td>
                             <td>511</td>
                             <td>2234</td>
