--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       gtag('config', 'G-BKN0PM1J6W');
     </script>
-    <title>Chinese medical instructional video question answering challenge</title>
+    <title>Multilingual Medical Instructional Video Question Answering Challenge</title>
 </head>
 
 <body>
@@ -53,11 +53,11 @@
 
     <main id="main" class="site-main main">
         <section class="container" id="banner">
-            <img src="./img_cmivqa/logo2.svg" width=150>
+            <img src="./img_cmivqa/logo_mmivqa.svg" width=150>
             <div class="title-text-box">
-                 <h1 class="display-4 text-bold">CMIVQA</h1>
-                <h2 class="display-5 text-bold">Chinese Medical Instructional Video Question Answering</h2>
-                <h5 class="text-regular">held in NLPCC 2023</h5>
+                 <h1 class="display-4 text-bold">MMIVQA</h1>
+                <h2 class="display-5 text-bold">Multilingual Medical Instructional Video Question Answering Challenge</h2>
+                <h5 class="text-regular">held in ACM MULTIMEDIA 2024</h5>
             </div>
             <a class="btn" id="learn-more-btn" href="#challenge" role="button">Learn more</a>
             <a class="btn" id="download-btn" href="#downloads" role="button">Download dataset</a>
